# intellectual-partner

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  setup_django.sh
accounts/: models.py
config/: __init__.py  asgi.py  celery.py  docker_settings.py  exceptions.py  middleware.py  routing.py  settings.py  urls.py
core/: apps.py  constants.py  exceptions.py  managers.py  middleware.py  models.py  serializers.py  services.py  signals.py  utils.py
docs/: rdd_知的な伴走者.md  学習支援アプリ「知的な伴走者」仕様書 ver.1.1.md  学習支援アプリ「知的な伴走者」仕様書 ver.2.0.md  学習支援アプリ「知的な伴走者」仕様案 ver.1.0.md  追加提案.md
teacher_support/: apps.py
